objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__RenewedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being renewed if this line item represents product renewal.</description>
        <inlineHelpText>Asset being renewed if this line item represents product renewal.</inlineHelpText>
        <label>Renewed Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedSubscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Subscription being renewed by this quote line.</description>
        <inlineHelpText>Subscription being renewed by this quote line.</inlineHelpText>
        <label>Renewed Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>RenewalQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links this line to another line in the same quote whose product requires this line&apos;s product.</description>
        <inlineHelpText>Indicates which other product on this quote requires it.</inlineHelpText>
        <label>Required By</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <description>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</description>
        <inlineHelpText>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</inlineHelpText>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote line.</description>
        <inlineHelpText>Source of cloned quote line.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines (Source)</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPriceDescription__c</fullName>
        <description>Name of the Discount Tier or description of Contracted Price that generated special price for this line item</description>
        <inlineHelpText>Name of the Discount Tier or Contacted Price applied to achieve the special price for this line item.</inlineHelpText>
        <label>Special Price Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPriceType__c</fullName>
        <description>Stores the type of special price offered on this line item. Null value indicates there is no special pricing. Under normal circumstances this field should not be modified via UI.</description>
        <inlineHelpText>Stores the type of special price offered on this line item. Null value indicates there is no special pricing.</inlineHelpText>
        <label>Special Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracted Price</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPrice__c</fullName>
        <description>Special (volume-discounted or contracted) unit price for the product being quoted by this line item.</description>
        <inlineHelpText>Special unit price for this line item, such as volume discount or contracted price.</inlineHelpText>
        <label>Special Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Date the service represented by this line item will begin (only applies if product is a subscription).</description>
        <inlineHelpText>The date the subscription for this product begins.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscribedAssetIds__c</fullName>
        <description>Comma separated list of asset IDs covered by this subscription line. Only applicable to renewal quotes.</description>
        <inlineHelpText>List of assets covered by this subscription line item. Do not update unless instructed.</inlineHelpText>
        <label>Subscribed Asset IDs</label>
        <length>19000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionBase__c</fullName>
        <description>Determines the price that serves as the base for percent-of-total calculations.</description>
        <inlineHelpText>Determines whether Percent of Total is calculated off List or Net product prices.</inlineHelpText>
        <label>Percent of Total Base</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionCategory__c</fullName>
        <description>Category defined on the product to limit percent-of-total calculations to certain products. Copied from the product record.</description>
        <inlineHelpText>Category defined on the product to limit percent-of-total calculations to certain products. Copied from the product record.</inlineHelpText>
        <label>Percent of Total Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPercent__c</fullName>
        <description>Percent of non-subscription total to be used as the price of this subscription.</description>
        <inlineHelpText>Percent of Total to be used when calculating this line item price.</inlineHelpText>
        <label>Percent of Total (%)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Method of calculating the subscription price. A blank value indicates that the line item isn&apos;t a subscription product.</description>
        <inlineHelpText>Indicates how the subscription price is calculated. If this is blank, the line items is not a subscription product.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionScope__c</fullName>
        <description>Determines how percent of total product prices are calculated. If scope is set to &quot;Quote&quot; any non-subscription and include in percent of total product is used in calculating every percent of total price. If scope is set to &quot;Group&quot; only products in the same group as the percent of total product are used in calculation.</description>
        <inlineHelpText>Indicates how percent of total prices are calculated: Quote uses all the non-subscription and include in percent of total products in the quote while Group uses only non-subscription products and include in percent of total products in the same group.</inlineHelpText>
        <label>Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTargetPrice__c</fullName>
        <description>Price of the subscription target product on which maintenance should calculate.</description>
        <inlineHelpText>Price of the target product on which percent of total should calculate.</inlineHelpText>
        <label>Percent of Total Target Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Term for the subscription product in this line. If the product is not a subscription this value has no effect.</description>
        <inlineHelpText>Term for this subscription. If this product is not a subscription this value has no effect.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this line item taxable.</description>
        <inlineHelpText>Indicates if the line item is taxable</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term. This is useful when you want to show a breakdown of payments in separate groups, for different terms, yet you want to discount reflected for the entire duration of the subscription. Leave Term Discount Level blank if you want discount schedules applied based on the term of each line item.</description>
        <inlineHelpText>Schedule for discounts based on subscription term. Setting this to &quot;Group&quot; applies the discount rate for the group term, while setting it to &quot;Quote&quot; applies the discount rate for the entire quote term, regardless of the different terms in your groups.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quote Lines (Term Discouned)</relationshipLabel>
        <relationshipName>TermDiscountedQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tier within the term discount schedule used to discount this line item.</description>
        <inlineHelpText>Tier within the term discount schedule used to discount this line item.</inlineHelpText>
        <label>Term Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Quote Lines (Term Discounted)</relationshipLabel>
        <relationshipName>TermDiscountedQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscount__c</fullName>
        <description>Discount calculated by applying subscription term against term discount schedule.</description>
        <inlineHelpText>Discount calculated by applying subscription term against term discount schedule.</inlineHelpText>
        <label>Term Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalDiscountAmount__c</fullName>
        <description>Total discount amount for this line item including volume discount, contracted discount, and additional discount.</description>
        <formula>IF(SBQQ__Bundled__c, 0,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; NOT(SBQQ__Existing__c), (SBQQ__ProratedListPrice__c * SBQQ__Quantity__c - SBQQ__CustomerPrice__c),
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; SBQQ__Existing__c, (SBQQ__ProratedListPrice__c * (SBQQ__Quantity__c-SBQQ__PriorQuantity__c) - SBQQ__CustomerPrice__c),
(SBQQ__ProratedListPrice__c -  SBQQ__CustomerPrice__c) * SBQQ__EffectiveQuantity__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total discount amount for this line item including volume discount, contracted discount, and additional discount.</inlineHelpText>
        <label>Total Discount (Amt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalDiscountRate__c</fullName>
        <description>Total discount for this line item including volume discount, contracted discount, and additional discount.</description>
        <formula>IF(SBQQ__ProratedListPrice__c == 0, 0,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; NOT(SBQQ__Existing__c),
IF(SBQQ__Quantity__c == 0, 0, (SBQQ__ProratedListPrice__c * SBQQ__Quantity__c - SBQQ__CustomerPrice__c) / (SBQQ__Quantity__c * SBQQ__ProratedListPrice__c)),
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; SBQQ__Existing__c,
IF(SBQQ__Quantity__c == SBQQ__PriorQuantity__c, 0, (SBQQ__ProratedListPrice__c * (SBQQ__Quantity__c-SBQQ__PriorQuantity__c) - SBQQ__CustomerPrice__c) / ((SBQQ__Quantity__c-SBQQ__PriorQuantity__c) * SBQQ__ProratedListPrice__c)),
(SBQQ__ProratedListPrice__c - SBQQ__CustomerPrice__c) / SBQQ__ProratedListPrice__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total discount for this line item including volume discount, contracted discount, and additional discount.</inlineHelpText>
        <label>Total Discount (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Cost for one unit of product quoted on this line item.</description>
        <inlineHelpText>Cost for one unit of product quoted on this line item.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnproratedNetPrice__c</fullName>
        <description>The full-term Net Price.</description>
        <inlineHelpText>The full term net price for individual line.</inlineHelpText>
        <label>Unprorated Net Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being upgraded by this quote line. Only populated if this quote line represents an upgrade.</description>
        <inlineHelpText>Asset being upgraded by this quote line. When the quote is contracted this asset will have its Usage End Date populated to indicate it&apos;s retired.</inlineHelpText>
        <label>Upgraded Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedQuantity__c</fullName>
        <description>Quantity being upgraded.</description>
        <inlineHelpText>Portion of this line&apos;s Prior Quantity being upgraded to another product.</inlineHelpText>
        <label>Upgraded Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpliftAmount__c</fullName>
        <description>Uplift (Amt) is measured as a currency amount. This is a system-calculated field, as Uplift can only be applied to MDQ segments in percent.</description>
        <inlineHelpText>Uplift (Amt) is measured as a currency amount. This is a system-calculated field, as Uplift can only be applied to MDQ segments in percent.</inlineHelpText>
        <label>Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Uplift__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Uplift is applied as a % against the previous year&apos;s price; the resulting price is entered into the Regular Price field on top of Special or Contracted Prices. Uplifts compound year after year. Uplift cannot be applied to the 1st Year of any Subscription.</description>
        <inlineHelpText>Uplift is applied as a % against the previous year&apos;s price; the resulting price is entered into the Regular Price field on top of Special or Contracted Prices. Uplifts compound year after year. Uplift cannot be applied to the 1st Year of any Subscription.</inlineHelpText>
        <label>Uplift</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__VolumeDiscount__c</fullName>
        <description>Discount schedules allow you to specify volume discounts based on a percentage of the product&apos;s price to be discounted using the quantity purchased or term. You can set the quantity or term ranges in tiers of different discount percentages. You can also apply discount schedules to Subscription Term.</description>
        <inlineHelpText>Specify volume discounts based on a % of the product&apos;s price to be discounted using the quantity purchased or term. You can set the quantity or term ranges in tiers of different discount %. You can also apply discount schedules to Subscription Term.</inlineHelpText>
        <label>Volume Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Number__c</fullName>
        <label>Stock Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>SBQQ__Quantity__c * SBQQ__UnitCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Barrel</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
                <value>
                    <fullName>Ton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <formula>SBQQ__UnitCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillableUnitPrice__c</fullName>
        <description>The unprorated amount that will bill each billing period. Equals ((TotalPrice * BillingFrequency) / (ProrateMultiplier * DefaultSubscriptionTerm)).</description>
        <formula>IF(ISPICKVAL(SBQQ__ChargeType__c , &apos;One-Time&apos;),  SBQQ__NetTotal__c,
        (SBQQ__NetTotal__c * (CASE(SBQQ__BillingFrequency__c,
        &quot;Monthly&quot;, 1,
        &quot;Quarterly&quot;, 3,
        &quot;Semiannual&quot;, 6,
        &quot;Annual&quot;, 12,
        0))) / ( SBQQ__ProrateMultiplier__c * SBQQ__DefaultSubscriptionTerm__c )
        )</formula>
        <inlineHelpText>The unprorated amount that will bill each billing period. Equals ((TotalPrice * BillingFrequency) / (ProrateMultiplier * DefaultSubscriptionTerm)).</inlineHelpText>
        <label>Billable Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>service_length__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Service Length (1 or 3 years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>service_level__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL-{0000000}</displayFormat>
        <label>Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Additional_discount_percent_or_amount</fullName>
        <active>true</active>
        <description>Validates additional discount is specified as a percentage or absolute amount but not both.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(SBQQ__Discount__c)), NOT(ISBLANK(SBQQ__AdditionalDiscountAmount__c)),NOT(SBQQ__Incomplete__c))</errorConditionFormula>
        <errorMessage>You may not specify additional discount as both percentage and absolute amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Invalid_Subscription_Term</fullName>
        <active>true</active>
        <description>Validates that subscription term is positive</description>
        <errorConditionFormula>IF( AND( NOT(ISNULL(SBQQ__SubscriptionTerm__c)), SBQQ__SubscriptionTerm__c &lt;= 0), TRUE, null)</errorConditionFormula>
        <errorMessage>The subscription term must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Markup_percent_or_amount</fullName>
        <active>true</active>
        <description>Validates markup is specified as a percentage or absolute amount but not both.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(SBQQ__MarkupRate__c)), NOT(ISBLANK(SBQQ__MarkupAmount__c)),NOT(SBQQ__Incomplete__c))</errorConditionFormula>
        <errorMessage>You may not specify markup as both percentage and absolute amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>blng__Dynamic_Invoicing_Amendment</fullName>
        <active>true</active>
        <description>Dynamic Invoicing only supports amendment cancellation and below error will be shown if a quantity increase or decrease is done instead.</description>
        <errorConditionFormula>ISPICKVAL(SBQQ__BillingFrequency__c, &apos;Invoice Plan&apos;) &amp;&amp; SBQQ__Quantity__c != SBQQ__PriorQuantity__c &amp;&amp;
SBQQ__Quantity__c != 0 &amp;&amp;
ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c , &apos;Amendment&apos;)</errorConditionFormula>
        <errorMessage>Can’t update the quantity. Dynamic Invoicing only supports cancellation amendments.</errorMessage>
    </validationRules>
</CustomObject>